refactored endpoints for login and registration
- set jwt access token to cookies on successful response

--- a/Be/Makefile
+++ b/Be/Makefile
@@ -1,24 +1,24 @@
 # Build the Go program
 build:
-	@echo Building the Go program...
-	@if not exist build mkdir build
-	go build -o build/fp_be.exe cmd/main.go cmd/routes.go
-	@echo Build complete! Binary located at build/fp_be.exe
+	@echo "Building the Go program..."
+	@mkdir -p build
+	go build -o build/fp_be cmd/main.go cmd/routes.go
+	@echo "Build complete! Binary located at build/fp_be"
 
 # Run the Go program
 run: build
-	@echo Running the Go program...
-	./build/fp_be.exe
+	@echo "Running the Go program..."
+	./build/fp_be
 
 # Clean the build directory
 clean:
-	@echo Cleaning up...
-	@if exist build rmdir /S /Q build
-	@echo Clean complete.
+	@echo "Cleaning up..."
+	@rm -rf build
+	@echo "Clean complete."
 
 # Run tests
 test:
-	@echo Running tests...
+	@echo "Running tests..."
 	go test ./...
 
 # Phony targets
