--- a/Fe/package.json
+++ b/Fe/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "jwt-decode": "^4.0.0",
     "next": "14.2.8",
+    "next-client-cookies": "^1.1.1",
     "react": "^18",
     "react-dom": "^18"
   },
